# bluprint_django-app

./: .bluprintrc  .gitignore  DEVELOPING.md  PROJECT_README.md  README.md  setup.cfg
example/: .gitignore  Makefile  Pipfile
example/project/: settings.py  urls.py
myapp/: conf.py  urls.py
myapp/static/myapp/vite/: manifest.json
myapp/static/myapp/vite/assets/: home.33ac7a5f.js  home.580cb8b5.js  home.a9073f9e.css  home.cbc3ddd2.css  home.ebfbb192.css  home.f85350a8.js  vendor.fbafc88b.js
myapp/templates/myapp/: home.html
myapp/templatetags/: myapp_manifest.py
myapp/utils/: auth.py  importers.py
myapp/views/: home.py
staticapp/: .eslintrc.cjs  .gitignore  jsconfig.json  package-lock.json  package.json  vite.config.js
staticapp/src/: home.js
staticapp/src/components/Home/: index.svelte
staticapp/src/styles/: main.scss
